<resources>
    <string name="app_name">WasteBucks</string>

    <string name="heading_reg">Get Started</string>
    <string name="subheading_reg">by creating a free account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_string">Password</string>
    <string name="your_email_string">Your  Email</string>
    <string name="or_login_with_string">Or login with</string>
    <string name="don_t_have_an_account__sign_up_string">Don\'t have an account?</string>
    <string name="welcome_back__string">Welcome Back!</string>
    <string name="login_ek3_string">Login</string>
    <string name="or">--------------------------------  Or  --------------------------------</string>
    <string name="leaderboard_heading">LEADERBOARD</string>
    <string name="onboarding_one_subject">Join us in revolutionizing waste management and embracing eco-friendly practices. With WasteBucks, you can effortlessly categorize your waste, earn rewards, and contribute to a sustainable future.</string>
    <string name="onboarding_two_subject">Simply categorize your waste, request collection, and our nearby hubs will estimate its quality and quantity, rewarding you with points. Redeem these points for a range of eco-friendly products that we deliver straight to you!</string>
    <string name="onboarding_three_subject">Participate in community challenges, earn badges, and compete on leaderboards. Your eco-friendly actions not only benefit you but contribute to cleaner cities and a healthier planet for all.</string>
    <string name="heading_three">Join challenges, climb leaderboards, and inspire others.</string>
    <string name="heading_two">Convert your household waste into rewards.</string>
    <string name="heading_one">Your gateway to a greener, more rewarding lifestyle</string>
    <string name="leaderboard_str">Sweat it out, climb the ranks.</string>

    <string name="default_web_client_id" translatable="false">115780088144-tbqnq68gki8c6n275rusuo150tqvq651.apps.googleusercontent.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">profile</string>
    <string name="Profile">Profile</string>
    <string name="black_hat_coder">black_hat_coder</string>
    <string name="edit_profile">Edit_profile</string>
    <string name="total_points">Total_points</string>
    <string name="total_items">Total_items</string>
    <string name="purchased_items">Purchased_items</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="general">General</string>
    <string name="about_app">About_App</string>
    <string name="log_out">Log_out</string>

    <string name="nameString">Name <font color="#FF0000"><b>*</b></font></string>
    <string name="emailString">Email <font color="#FF0000"><b>*</b></font></string>
    <string name="msgString">Message<font color="#FF0000"><b>*</b></font></string>


</resources>