<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1EBF4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:text="@string/welcome_back__string"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_email_string"
                android:textColor="@color/black"
                android:paddingLeft="45dp"
                android:textSize="14sp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/logemail" />

            <EditText
                android:id="@+id/logemail"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/login_edit_text"
                android:layout_marginTop="60dp"
                android:drawableRight="@drawable/baseline_mail_outline_24"
                android:hint="Email"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_string"
                android:textColor="@color/black"
                android:paddingLeft="45dp"
                android:textSize="14sp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/log_pwd" />

            <EditText
                android:id="@+id/log_pwd"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/login_edit_text"
                android:drawableRight="@drawable/key"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logemail" />


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Forgot Password"
                android:paddingRight="2dp"
                android:textColor="@color/violet"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_pwd" />

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:background="@drawable/reg_btn_bg"
                android:backgroundTint="@color/next_btn"
                android:drawablePadding="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/login_ek3_string"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="45dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log_pwd" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account__sign_up_string"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Sign Up"
                    android:textColor="@color/violet"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:background="@drawable/sign_in_bg"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="200dp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv2">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/google" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Log in with Google"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
