<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1EBF4"
    android:textAlignment="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="-30dp">


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="63dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="RANK"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="31"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:text="USER"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="POINTS"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="413dp"
            android:layout_height="86dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="408dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0">

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="301dp"
            android:layout_height="55dp"
            android:fontFamily="monospace"
            android:text="@string/leaderboard_heading"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="320dp"
            android:layout_height="57dp"
            android:text="@string/leaderboard_str"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboard_recycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>